# uvccapture

./: .gitignore  CMakeLists.txt  Makefile  README  TODO  uvccapture  uvccapture.c  uvccapture.c.orig  v4l2uvc.c  v4l2uvc.h
